// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoPopulateInput /> render() should render checked 1`] = `
<div
  className="container"
>
  <InputField
    disabled={true}
    onChange={[MockFunction]}
    type="text"
    value="I am a title"
  />
  <ForwardRef(CheckBox)
    isChecked={true}
    onChange={[Function]}
  >
    Use the same as Title
  </ForwardRef(CheckBox)>
</div>
`;

exports[`<AutoPopulateInput /> render() should render unchecked 1`] = `
<div
  className="container"
>
  <InputField
    disabled={false}
    onChange={[MockFunction]}
    type="text"
    value="Custom title"
  />
  <ForwardRef(CheckBox)
    isChecked={false}
    onChange={[Function]}
  >
    Use the same as Title
  </ForwardRef(CheckBox)>
</div>
`;
